# routes/userRoutes.js
@@ -5,7 +5,7 @@ import { requireAuth } from "../middlewares/auth.js";
 
 const router = express.Router();
 
+router.get("/me", requireAuth, userController.getMyProfile);
 router.patch("/me/profile", requireAuth, userController.updateMyProfile);
 
 export default router;
-
